--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@prisma/client": "5.13.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
     "hono": "^4.6.16",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
     "prisma": "5.13.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.2"
   }
 }
