--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "hono-auth",
   "scripts": {
-    "dev": "bun run --hot src/index.ts",
-    "start": "bun src/index.ts"
+    "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
     "@hono/swagger-ui": "^0.5.0",
