--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hono-auth",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
+    "build": "bun build src/index.ts -o build/index.js",
     "start": "bun src/index.ts"
   },
   "dependencies": {
